fix: Task 필터링 요소를 배열로 변경 (CM-111)